[project]
name = "er-aws-rds-proxy"
version = "0.2.1"
description = "ERv2 module for managing AWS RDS Proxy clusters"
authors = [{ name = "AppSRE", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = "~= 3.12.0"
dependencies = [
    "boto3==1.43.2",
    "external-resources-io==0.6.4",
    "pydantic==2.13.3",
]

[project.urls]
homepage = "https://github.com/app-sre/er-aws-rds-proxy"
repository = "https://github.com/app-sre/er-aws-rds-proxy"
documentation = "https://github.com/app-sre/er-aws-rds-proxy"

[dependency-groups]
dev = [
    "boto3-stubs-lite[ec2]==1.43.2",
    "external-resources-io[cli]==0.6.4",
    "mypy==1.20.2",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest==9.0.3",
    "ruff==0.15.12",
]

[project.scripts]
generate-tf-config = 'er_aws_rds_proxy.__main__:main'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py312'
src = ["er_aws_rds_proxy", "tests", "hooks", "hooks_lib"]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",    # Missing copyright header
    "D100",   # Missing docstring in public module
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D211",   # No blank lines allowed before class docstring
    "D212",   # multi-line-summary-first-line
    "D213",   # multi-line-summary-second-line
    "D4",     # Doc string style
    "E501",   # Line too long
    "G004",   # Logging statement uses string formatting
    "S101",   # Use of assert detected. Pytest uses assert
    "S603",   # subprocess.Popen without shell=True
    "S607",   # Starting a process with a partial executable path
    "EM101",
    "EM102",
    "TRY003",
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["er_aws_rds_proxy", "hooks", "hooks_lib"]

# Mypy configuration
[tool.mypy]
plugins = "pydantic.mypy"
files = ["er_aws_rds_proxy", "tests", "hooks", "hooks_lib"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
